--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 </head>
 
 <body>
-    <!---- comienzo HEADER ---->
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="logo" href="index.html">Leonel Di giorgio</a>
+                <a class="logo" href="index.html">Leo Di giorgio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -34,16 +33,16 @@
             </div>
         </nav>
     </header>
-    <!---- fin HEADER ---->
+
 
 
     <!-- comienza MAIN ------->
 
     <div class="container-animaciones">
-        <h2 class="animaciones">Lookeate!!</h2>
-        <h3 class="animaciones">-Sector damas</3>
-            <h3 class="animaciones">-Barberia</h3>
-            <h3 class="animaciones">-Atencion personalizada</h3>
+        <h1 class="animaciones">Lookeate!!</h1>
+        <h3 class="animaciones">Sector damas</3>
+            <h3 class="animaciones">Barberia</h3>
+            <h3 class="animaciones">Atencion personalizada</h3>
     </div>
 
     <!---- CAROUSEL ---->
@@ -76,17 +75,25 @@
 
 
 
- <!---- row abajo ---->
-    <div class="container" style="margin: 10px;">
+    <!---- galeria imagenes ---->
+    <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-            <div class="col"><h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4></div>
-            <div class="col"><img src="imagenes/chicoBarberia.jpg" class="gallery-imagen"></div>
-            <div class="col"><h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas earum.</h4></div>
-            <div class="col"> <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
+            <div class="col">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
+            </div>
+            <div class="col">
+                <img src="imagenes/chicoBarberia.jpg" class="gallery-imagen">
+            </div>
+            <div class="col">
+                <h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas
+                    earum.</h4>
+            </div>
+            <div class="col"> 
+                <img src="imagenes/chicaSonrisa.jpg" class="gallery-imagen">
             </div>
         </div>
     </div>
- <!---- fin row abajo ---->
+    <!---- fin  ---->
 
     <!--- fin MAIN -- -->
 
@@ -96,15 +103,15 @@
     <!---- comienzo FOOTER ---->
     <footer>
         <div class="copyright">
-            <h4>Copyright - todos los derechos reservados</h4>
+            <h4 class="copyright-item">Copyright - todos los derechos reservados</h4>
         </div>
 
         <div class="redsocial-container">
             <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
-                    class="redsocial-item-insta"></a>
+                    class="redsocial-item"></a>
             <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
-                    class="redsocial-item-face"></a>
-            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item-whatsapp"></a>
+                    class="redsocial-item"></a>
+            <a href="whatsapp"><img src="imagenes/whatsapp.png" class="redsocial-item"></a>
         </div>
     </footer>
     <!---- fin FOOTER ---->
