--- a/index.html
+++ b/index.html
@@ -35,51 +35,55 @@
     </header>
 
 
-
     <!-- comienza MAIN ------->
 
+<!---- CAROUSEL ---->
+<section class="container-carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</section>
+<!---- fin CAROUSEL ---->
+
+
+
+<!---- ANIMACIONES ---->
     <section>
         <div class="animaciones"> 
 
-            <div class="animaciones-item"> <h1>Lookeate!!</h1></div>
+            <h1 class="animaciones-letras">Lookeate!!</h1>
 
-            <div class="animaciones-item"> <h3>Sector damas</3></div>
+            <h3 class="animaciones-letras">Sector damas</3>
 
-            <div class="animaciones-item"> <h3>Barberia</h3></div>
+            <h3 class="animaciones-letras">Barberia</h3>
 
-            <div class="animaciones-item"> <h3>Atencion personalizada</h3></div>
+            <h3 class="animaciones-letras">Atencion personalizada</h3>
 
         </div>
     </section>
+    <!---- fin ANIMACIONES ---->
 
-    <!---- CAROUSEL ---->
-    <section class="container-carousel">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
-    <!---- fin CAROUSEL ---->
-
+    
 
 
     <!---- galeria imagenes ---->
@@ -104,6 +108,7 @@
 
     <!---- marcas ---->
     <section class="marcas">
+        
         <div class="marcas-item"><img src="imagenes/sirFausto.jfif" alt="" class="marca-imagen"></div>
 
         <div class="marcas-item"><img src="imagenes/whal.png" alt="" class="marca-imagen"></div>
