--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="estilismo, peluqueria, barberia, corte cabello, tintura, degrade, fade, 
   navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
-    <meta name="description"
-    content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
+    <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
      un referente en el sector en la ciudad de Rosario.">
     <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -43,55 +42,60 @@
 
     <!-- comienza MAIN ------->
 
-<!---- CAROUSEL ---->
-<section class="container-carousel">
+    <!---- CAROUSEL ---->
+    <section class="container-carousel">
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
-          <h4 style="color: white">Servicios en estética, peluquería y barberia.</h4>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imagenes/carusel1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
+                        <h4 style="color: white">Servicios en estética, peluquería y barberia.</h4>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 style="color: black ;">Exclusivo en la ciudad de Rosario</h2>
+                        <h4 style="color: black;">Puntualidad en la atención.</h4>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
+                        <h4 style="color: white">Contamos con productos de primeras marcas.</h4>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/carusel2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 style="color: black ;">Exclusivo en la ciudad de Rosario</h2>
-          <h4 style="color: black;">Puntualidad en la atención.</h4>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/carusel3.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 style="color: white">Exclusivo en la ciudad de Rosario</h2>
-          <h4 style="color: white">Contamos con productos de primeras marcas.</h4>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
 
-</section>
-<!---- fin CAROUSEL ---->
+    </section>
+    <!---- fin CAROUSEL ---->
 
 
-<!---- ANIMACIONES ---->
+    <!---- ANIMACIONES ---->
     <section>
-        <div class="animaciones"> 
+        <div class="animaciones">
 
             <h1 class="animaciones-letras">Salon de estetica, Peluqueria y Barberia</h1>
 
@@ -105,40 +109,49 @@
     </section>
     <!---- fin ANIMACIONES ---->
 
-    
+
 
 
     <!---- galeria imagenes ---->
     <section class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
             <div class="col">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
+                <img src="imagenes/index1.jpg" alt="herramientas para cortar el cabello" class="gallery-imagen">
             </div>
             <div class="col">
-                <img src="imagenes/index1.jpg" alt="herramientas para cortar el cabello" class="gallery-imagen">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
+            </div>
+
+            <div class="col">
+                <img src="imagenes/index2.jpg" alt="sepillos para peinar el cabello" class="gallery-imagen">
             </div>
             <div class="col">
                 <h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas
                     earum.</h4>
             </div>
-            <div class="col">
-                <img src="imagenes/index2.jpg" alt="sepillos para peinar el cabello" class="gallery-imagen">
-            </div>
         </div>
     </section>
     <!---- fin galeria imagenes ---->
 
-    <!---- marcas ---->
-    <section class="marcas">
-        <div class="marcas-item"><img src="imagenes/wella.jpg" alt="marca wella, productos de tintura" class="marca-imagen"> </div>
-        
-        <div class="marcas-item"><img src="imagenes/sirFausto.jpg" alt="marca sir fausto, productos para peinar" class="marca-imagen"></div>
-
-        <div class="marcas-item"><img src="imagenes/whal.png" alt="marca whal, herramientas de peluqueria" class="marca-imagen"></div>
-
-        <div class="marcas-item"><img src="imagenes/loreal.png" alt="marca loreal, productos de estetica" class="marca-imagen"></div>
+    <!---- MARCAS ---->
+    <section>
+        <h4 class="titulo-marcas">Trabajamos con marcas de nivel internacional</h4>
     </section>
-    <!---- fin marcas ---->
+
+    <section class="marcas">
+        <div class="marcas-item"><img src="imagenes/wella.jpg" alt="marca wella, productos de tintura"
+                class="marca-imagen"> </div>
+
+        <div class="marcas-item"><img src="imagenes/sirFausto.jpg" alt="marca sir fausto, productos para peinar"
+                class="marca-imagen"></div>
+
+        <div class="marcas-item"><img src="imagenes/whal.png" alt="marca whal, herramientas de peluqueria"
+                class="marca-imagen"></div>
+
+        <div class="marcas-item"><img src="imagenes/loreal.png" alt="marca loreal, productos de estetica"
+                class="marca-imagen"></div>
+    </section>
+    <!---- fin MARCAS ---->
 
     <!--- fin MAIN -- -->
 
@@ -153,11 +166,12 @@
             </div>
 
             <div class="redsocial-container">
-                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png" alt="logo instagram"
-                        class="redsocial-item-instagram"></a>
-                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png" alt="logo facebook"
-                        class="redsocial-item-facebook"></a>
-                <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp" class="redsocial-item-whatsapp"></a>
+                <a href="https://www.instagram.com/leo.digiorgio/"><img src="imagenes/instagram.png"
+                        alt="logo instagram" class="redsocial-item-instagram"></a>
+                <a href="https://www.facebook.com/leonel.digiorgio/"><img src="imagenes/facebook.png"
+                        alt="logo facebook" class="redsocial-item-facebook"></a>
+                <a href="whatsapp"><img src="imagenes/whatsapp.png" alt="logo whatsapp"
+                        class="redsocial-item-whatsapp"></a>
             </div>
         </section>
     </footer>
