--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
     <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
      un referente en el sector en la ciudad de Rosario.">
-     <meta property:"og:type" content="web site"> 
-     <meta property:"og:title" content="Leo Di giorgio | peluqueria damas y caballeros">
-     <meta property:"og:url" content="https://leodigiorgio.000webhostapp.com/">
-     <meta property:"og:image" content="...">
+     <meta property:'og:type' content="web site"> 
+     <meta property:'og:title' content="Leo Di giorgio | peluqueria damas y caballeros">
+     <meta property:'og:url' content="https://leodigiorgio.000webhostapp.com/">
+     <meta property:'og:image' content="https://cdn-icons-png.flaticon.com/512/4905/4905462.png">
      
     <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
